--- a/FormularioAlberto.html
+++ b/FormularioAlberto.html
@@ -7,7 +7,7 @@ FormularioAlberto
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Users/Mañana/Desktop/Alberto Guerra/Lenguaje de marcas/CUMMASTER/PROJECT-SGI/style.css">
     <link rel="shortcut icon" href="./img/favicon.ico">
-    <title>Alta socio/a - Cruz Roja</title>
+    <title>Soy Donante</title>
 </head>
 <body>
     <header>
