--- a/FormularioAlberto.html
+++ b/FormularioAlberto.html
@@ -5,7 +5,7 @@ FormularioAlberto
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Users/Mañana/Desktop/Alberto Guerra/Lenguaje de marcas/CUMMASTER/PROJECT-SGI/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/favicon.ico">
     <title>Soy Donante</title>
 </head>
