--- a/FormularioAlbertoCalzada.html
+++ b/FormularioAlbertoCalzada.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="campo">
                         <label for="Tipo_Documento">Tipo de Documento <span>*</span></label>
-                        <select  class="select" name="tipoDocumento">
+                        <select  class="select" name="tipoDocumento" required>
                             <option value="seleccion">Seleccione el tipo de documento</option>
                             <option value="Número-Identificación-Fiscal">Número Identificación Fiscal</option>
                             <option value="Número-Identificación-Extranjeros">Número Identificación Extranjeros</option>
@@ -87,7 +87,7 @@
                     <div class="campo">
     
                         <label for="numeroDocumento">Número de Documento</label>
-                        <input  class='input'type="text" name="numeroDocumento">
+                        <input  class='input'type="text" name="numeroDocumento" required>
                     </div>
                     <div class="campo">
                         <label for="Sexo">Sexo <span>*</span></label>
@@ -119,7 +119,7 @@
                         <input class='input' type="email" name="email">
                     </div>
                     <div class="campo">
-                        <label for="email2">Repetir Correo Electrónico<span>*</span></label>
+                        <label for="email2">Repetir Correo<span>*</span></label>
                         <input class='input' type="email" name="email2">
                     </div>
                 </div>
