--- a/FormularioAlejandro.html
+++ b/FormularioAlejandro.html
@@ -89,7 +89,7 @@
                         </select>
                     </div>
                     <div>
-                        <input type="submit" value="SIGUIENTE" class="botonrojoFormJavi">
+                        <input type="submit" value="SIGUIENTE" class="buttonFormacion">
                     </div>
                 </form>
             </div>
