--- a/FormularioAlbertoCalzada.html
+++ b/FormularioAlbertoCalzada.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="campo">
     
-                        <label for="numeroDocumento">Número de Documento</label>
+                        <label for="numeroDocumento">Número de Documento <span>*</span></label>
                         <input  class='input'type="text" name="numeroDocumento" required>
                     </div>
                     <div class="campo">
