--- a/Inicio.html
+++ b/Inicio.html
@@ -37,13 +37,13 @@
             <div class="menu">
                 <a href="./Que-hacemos.html">Que hacemos</a>
                 <a href="#">Colaborado</a>
-                <a href="#">Voluntariado</a>
+                <a href="./FORMULARIODAVID.html">Voluntariado</a>
                 <a href="./FormularioAlejandro.html">Fórmate</a>
             </div>
             <div>
                 <img src="./img/buscar.png" alt="busqueda" class="search">
-                <a href="#" class="button1">Haz voluntariado</a>
-                <a href="#" class="button2">Hazte socio/a</a>
+                <a href="./FormularioAlbertoCalzada.html" class="button1">Haz voluntariado</a>
+                <a href="./FormularioJavier.html" class="button2">Hazte socio/a</a>
             </div>
         </div>
     </header>
