--- a/Inicio.html
+++ b/Inicio.html
@@ -36,7 +36,7 @@
             </div>
             <div class="menu">
                 <a href="./Que-hacemos.html">Que hacemos</a>
-                <a href="#">Colaborado</a>
+                <a href="./FormularioVictor.html">Colaborado</a>
                 <a href="./FORMULARIODAVID.html">Voluntariado</a>
                 <a href="./FormularioAlejandro.html">Fórmate</a>
             </div>
