--- a/FormularioAlejandro.html
+++ b/FormularioAlejandro.html
@@ -51,7 +51,7 @@
             </div>
             <div class="titulos"></div>
             <div class="formFormacion">
-                <form action="get">
+                <form action="">
                     <div class="formFormacion2">
                         <div>
                             <label for="nameFormacion" style="width: 100px;">Nombre</label><br>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="buttonForm">
-                        <input type="submit" value="SIGUIENTE" class="buttonFormacion">
+                        <input type="submit" value="ENVIAR" class="buttonFormacion">
                     </div>
                 </form>
             </div>
