--- a/Inicio.html
+++ b/Inicio.html
@@ -30,7 +30,7 @@
             </div>
             <div class="lineHeaderTop">
                 <img src="./img/usuario.png" alt="identificate">
-                <a href="#">Identificate</a>
+                <a href="./FormularioMoha.html">Identificate</a>
             </div>
             <div class="lineHeaderTop">
                 <img src="./img/periodico.png" alt="sala de prensa">
