--- a/Inicio.html
+++ b/Inicio.html
@@ -22,7 +22,7 @@
         <div class="headertop">
             <div class="lineHeaderTop">
                 <img src="./img/correo-electronico.png" alt="contacto">
-                <a href="#">Contacto</a>
+                <a href="./FormularioAlberto.html">Contacto</a>
             </div>
             <div class="lineHeaderTop">
                 <img src="./img/maletin.png" alt="intranet">
