--- a/FormularioAlberto.html
+++ b/FormularioAlberto.html
@@ -103,6 +103,10 @@ FormularioAlberto
                     <div>
                         <label for="rep-correo">Repite correo electronico<span class="acent">*</span></label><br>
                         <input type="email" name="rep-correo" required>
+                    </div>
+                    <div>
+                        <label for="rep-correo">Fecha<span class="acent">*</span></label><br>
+                        <input type="date" name="rep-correo" required>
                     </div>                                      
                 </div>
                 <div>
