--- a/FormularioAlbertoCalzada.html
+++ b/FormularioAlbertoCalzada.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Formulario Alberto C</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -73,7 +73,7 @@
                     </div>
                     <div class="campo">
                         <label for="fechaNacimiento">Fecha de Nacimiento <span>*</span></label>
-                        <input class='input'  type="date" name="fechaNacimiento" required>
+                        <input class='input' id="fechaNacimiento" type="date" name="fechaNacimiento" required>
                     </div>
                     <div class="campo">
                         <label for="Tipo_Documento">Tipo de Documento <span>*</span></label>
