--- a/FormularioJavier.html
+++ b/FormularioJavier.html
@@ -13,7 +13,7 @@
         <div class="headertop">
             <div class="lineHeaderTop">
                 <img src="./img/correo-electronico.png" alt="contacto">
-                <a href="#">Contacto</a>
+                <a href="./FormularioAlberto.html">Contacto</a>
             </div>
             <div class="lineHeaderTop">
                 <img src="./img/maletin.png" alt="intranet">
@@ -21,7 +21,7 @@
             </div>
             <div class="lineHeaderTop">
                 <img src="./img/usuario.png" alt="identificate">
-                <a href="#">Identificate</a>
+                <a href="./FormularioMoha.html">Identificate</a>
             </div>
             <div class="lineHeaderTop">
                 <img src="./img/periodico.png" alt="sala de prensa">
@@ -34,14 +34,14 @@
             </div>
             <div class="menu">
                 <a href="./Que-hacemos.html">Que hacemos</a>
-                <a href="#">Colaborado</a>
-                <a href="#">Voluntariado</a>
-                <a href="#">Fórmate</a>
+                <a href="./FormularioVictor.html">Colaborado</a>
+                <a href="./FORMULARIODAVID.html">Voluntariado</a>
+                <a href="./FormularioAlejandro.html">Fórmate</a>
             </div>
             <div>
                 <img src="./img/buscar.png" alt="busqueda" class="search">
-                <a href="#" class="button1">Haz voluntariado</a>
-                <a href="#" class="button2">Hazte socio/a</a>
+                <a href="./FormularioAlbertoCalzada.html" class="button1">Haz voluntariado</a>
+                <a href="./FormularioJavier.html" class="button2">Hazte socio/a</a>
             </div>
         </div>
     </header>
@@ -61,7 +61,7 @@
         </div>
         </div>
         <div class="form1">
-            <form action="get" class="generalForm1">
+            <form action="" class="generalForm1" method="get">
                 <div class="formColum1">
                     <div>
                         <label for="nombre-persona-contacto">Nombre persona de contacto<span class="acent">*</span></label><br><br>
@@ -81,7 +81,7 @@
                     </div>
                     <div>
                         <label for="naturaleza-juridica">Naturaleza juridica<span class="acent">*</span></label><br><br>
-                        <select name="naturaleza-juridica" aria-placeholder="Seleccione Naturaleza Juridica" required>
+                        <select name="naturaleza-juridica" placeholder="Seleccione Naturaleza Juridica" required>
                             <option value="sociedad-anonima">Sociedad Anónima (S.A.)</option>
                             <option value="sociedad-limitada">Sociedad Limitada (SI o SRL)</option>
                             <option value="sociedad-cooperativa">Sociedad Cooperativa </option>
