--- a/Inicio.html
+++ b/Inicio.html
@@ -14,7 +14,7 @@
     <meta http-equiv="refresh" content="10; url=https://www2.cruzroja.es/%3E">
     <meta name="description" content="En esta página tenemos la misión  de proteger la vida y la dignidad de las víctimas de la guerra o de la violencia al interior de un país prestándoles asistencia 
         médica y humanitaria, así como promover el fortalecimiento del derecho y de los principios humanitarios universales.">
-    <META name="Alberto" content="CruzRoja">
+    <meta name="Alberto" content="CruzRoja">
     <meta name="JAVIER" content="FORMULARIOS Y HEADER">
 </head>
 <body>
